# derp

./: .gitignore  .gitmodules  CMakeLists.txt
include/: shader.cpp  shader.hpp
include/derp/: camera.cpp  camera.hpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp
include/glad/: glad.h
resources/shaders/: light_cube.frag  light_cube.vert  normal.vert  simple.frag  simple.vert  texture.frag  texture.vert  transform.vert
src/: glad.c  main.cpp
